# kingshot-role-manager

./: .gitignore  CONTRIBUTING.md  Containerfile  README.md  ROADMAP.md  compose.yaml  database.py  instruction.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish-bot-image.yml
bot/: .dockerignore  .env  .gitignore  Containerfile  compose.yaml  database.py  main.py  pyproject.toml  role_sync.py
bot/cogs/: admin.py  events.py  reconciliation.py  verification.py
bot/db/: schema.sql
bot/services/: database.py  kingshot_api.py  pings.py  role_sync.py  roster.py
bot/src/kingshot_role_manager/: __init__.py  __main__.py
bot/src/kingshot_role_manager/cogs/: __init__.py  admin.py  diplomacy.py  events.py  identity.py  reconciliation.py  roster.py  verification.py
bot/src/kingshot_role_manager/services/: __init__.py  database.py  kingshot_api.py  permissions.py  role_sync.py  roster.py  scheduler.py
bot/src/kingshot_role_manager/ui/: __init__.py  diplomacy_views.py  ping_views.py  verification_views.py  views.py
cogs/: admin.py  events.py  roles.py  verification.py
helm/kingshot-role-manager/: Chart.yaml  values.yaml
helm/kingshot-role-manager/templates/: _helpers.tpl  deployment.yaml  secret.yaml  serviceaccount.yaml
k8s/: deployment.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml
roster-script/: .gitignore  README.md  pyproject.toml
roster-script/roster_script/: __init__.py  __main__.py  extractor.py  ocr.py
